Отправка на почту и ряд правок

--- a/FillInApp.csproj
+++ b/FillInApp.csproj
@@ -61,7 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actions\DownloadAction.cs" />
-    <Compile Include="Actions\SaveChangesAction.cs" />
+    <Compile Include="Actions\SendMailAction.cs" />
     <Compile Include="Actions\UploadAction.cs" />
     <Compile Include="GUI\MainForm.cs">
       <SubType>Form</SubType>
