--- a/FillInApp.csproj
+++ b/FillInApp.csproj
@@ -63,12 +63,19 @@
     <Compile Include="Actions\DownloadAction.cs" />
     <Compile Include="Actions\SendMailAction.cs" />
     <Compile Include="Actions\UploadAction.cs" />
+    <Compile Include="GUI\MailToForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\MailToForm.Designer.cs">
+      <DependentUpon>MailToForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GUI\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\MailHelper.cs" />
     <Compile Include="Helpers\WordOfficeHelper.cs" />
     <Compile Include="Interfaces\IOfficeWrapper.cs" />
     <Compile Include="Wrappers\WordOfficeWrapper.cs" />
@@ -82,6 +89,9 @@
     <Compile Include="Interfaces\IUserAction.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="GUI\MailToForm.resx">
+      <DependentUpon>MailToForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
